squishing bugs

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -281,11 +281,11 @@ copyright {
     li {
         font-size: 25px;
     }
-    #banner {
-        top: 150px;
-        left: 7%;
-        max-width: 925px;
-    }
+ #banner {
+    top: 130px;
+    left: 15%;
+    max-width: 925px;
+}
     .jumbotron {
         height: 410px !important;
     }
@@ -333,15 +333,23 @@ copyright {
         left: 730px;
     }
     #bottom {
-        top: 0;
-        width: 93%;
+        top: 30px;
+        width: 95%;
     }
-    #location {
-        width: 94%;
-    }
+ #location {
+    width: 96%;
+    left: 30px;
+    top: 0px;
+    height: 115px;
+}
     li {
         font-size: 25px;
     }
+      #banner {
+    top: 110px;
+    left: 25%;
+    max-width: 925px;
+}
     #navigation {
         width: 507px;
         height: 40px;
@@ -364,12 +372,19 @@ copyright {
         left: 10px;
     }
     .row {
-        top: 50px;
-        height: 560px;
-    }
+    top: 50px;
+    height: 627px;
+    max-width: 2030px;
+   
+}
     .caption > p {
         font-size: 17px;
     }
+    
+    #googleMap {
+    top: 0;
+    max-width: 96%;
+}
     footer {
         top: 372px !important;
     }
@@ -380,7 +395,7 @@ copyright {
     }
 }
 
-@media only screen and (min-width: 1882px) {}
+ 
 
 @media only screen and (min-width: 2560px) {
     .jumbotron {
@@ -390,7 +405,7 @@ copyright {
         top: 350px;
     }
     #banner {
-        top: 81px;
+        top: 111px;
         left: 702px;
         width: 1072px;
     }
